fixed spacing for pictures

--- a/styles.css
+++ b/styles.css
@@ -169,7 +169,7 @@ body {
     width: 30%;
     background-color: white;
     border-radius: 5px;
-    height: 28%;
+    height: 26%;
     margin-left: 20px
 }
 
@@ -243,14 +243,14 @@ body {
 
 @media only screen and (max-width: 1095px) {
     .header-container {
+        display: flex;
         flex-direction: column;
-        justify-content: flex-start;
-
+        align-items: flex-start;
     }
+
     .main-content {
         flex-direction: column;
-        justify-content: center;    
-        
+        justify-content: flex-start;    
     }
 
     .content-wrap {
@@ -260,8 +260,8 @@ body {
 
     .stories {
         order: -1;
+        margin-bottom: 20px;
     }
-    
 
 }
 
